--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ Map
   // load a tile layer
   L.tileLayer('cocohead.jpg',
     {
+      attribution: 'Tiles by <a href="http://mapc.org">MAPC</a>, Data by <a href="http://mass.gov/mgis">MassGIS</a>',
       maxZoom: 17,
       minZoom: 9
     }).addTo(map);
