--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-  <title>A Leaflet map!</title>
+  <title>Map Testing</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js"></script>
   <style>
-    #map{ height: 400px }
+    #map{ height: 1000px }
   </style>
 </head>
 <body>
 
-Map
+One day this will be an ITP map...
 
   <div id="map"></div>
 
