--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js"></script>
   <style>
-    #map{ height: 5100px 
-    width: 4871px }
+    #map {
+            height: 100%;
+            width: 100%;
   </style>
 </head>
 <body>
