--- a/index.html
+++ b/index.html
@@ -19,14 +19,9 @@ One day this will be an ITP map...
 
   // initialize the map
   var map = L.map('map').setView([42.35, -71.08], 13);
+  mapLink = 
+            'map.jpg';
 
-  // load a tile layer
-  L.tileLayer('map.jpg',
-    {
-      attribution: 'Tiles by <a href="http://mapc.org">MAPC</a>, Data by <a href="http://mass.gov/mgis">MassGIS</a>',
-      maxZoom: 17,
-      minZoom: 9
-    }).addTo(map);
 
   </script>
 </body>
