--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 One day this will be an ITP map...
 
-  <div id="map"></div>
+     <div id="map"></div>
 
-  <script>
+    <script
+        src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
+    </script>
 
-  // initialize the map
-  var map = L.map('map').setView([42.35, -71.08], 13);
-  mapLink = 
-            'map.jpg';
-
-
-  </script>
-</body>
+    <script>
+        var map = L.map('map').setView([-41.2858, 174.78682], 14);
+        mapLink = 
+            'http://i.imgur.com/CRqEK54.jpg';
+            }).addTo(map);
+    </script>
 </html>
  
