--- a/index.html
+++ b/index.html
@@ -1,29 +1,66 @@
+
+<!DOCTYPE html>
 <html>
 <head>
-  <title>Map Testing</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js"></script>
-  <style>
-    #map {
-            height: 100%;
-            width: 100%;
-  </style>
+	
+	<title>CRS.Simple example - Leaflet</title>
+
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+
+	<style>
+		#map {
+			width:5100px;
+			height: 4900px;
+		}
+	</style>
+	
 </head>
 <body>
 
-One day this will be an ITP map...
+<div id='map'></div>
 
-     <div id="map"></div>
+<script>
 
-    <script
-        src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
-    </script>
+	var map = L.map('map', {
+		crs: L.CRS.Simple,
+		minZoom: -3
+	});
 
-    <script>
-        var map = L.map('map').setView([-41.2858, 174.78682], 14);
-        mapLink = 
-            'http://i.imgur.com/CRqEK54.jpg';
-            }).addTo(map);
-    </script>
+	var yx = L.latLng;
+
+	var xy = function(x, y) {
+		if (L.Util.isArray(x)) {    // When doing xy([x, y]);
+			return yx(x[1], x[0]);
+		}
+		return yx(y, x);  // When doing xy(x, y);
+	};
+
+	var bounds = [xy(-25, -26.5), xy(1023, 1021.5)];
+	var image = L.imageOverlay('map.jpg', bounds).addTo(map);
+
+	var Kings Landing      = xy(175.2, 145.0);
+	var Casterly Rock    = xy( 41.6, 130.1);
+	var Sunspear = xy( 13.4,  56.5);
+	var Nate   = xy(218.7,   8.3);
+
+	L.marker(     Kings Landing).addTo(map).bindPopup(      'Kings Landing');
+	L.marker(   Casterly Rock).addTo(map).bindPopup(    'Casterly Rock');
+	L.marker(Sunspear).addTo(map).bindPopup('Sunspear');
+	L.marker(   Nate).addTo(map).bindPopup(    'Nate');
+
+	var travel = L.polyline([Kings Landing, Nate]).addTo(map);
+
+	map.setView(xy(120, 70), 1);
+
+</script>
+
+
+
+</body>
 </html>
- 
